--- a/src/main/webapp/resources/style/backend.css
+++ b/src/main/webapp/resources/style/backend.css
@@ -1,5 +1,6 @@
 body,h1,h2,h3,h4,h5,h6,hr,p,blockquote,dl,dt,dd,ul,ol,li,pre,form,fieldset,legend,button,input,textarea,th,td{margin:0;padding:0}
-body,button,input,select,textarea{font:12px/1.5 tahoma,arial,"microsoft yahei",simsun,sans-serif}h1,h2,h3,h4,h5,h6{font-size:100%}
+body,button,input,select,textarea{font:12px/1.5 tahoma,arial,"microsoft yahei",simsun,sans-serif}
+h1,h2,h3,h4,h5,h6{font-size:100%}
 address,cite,dfn,em,var{font-style:normal}
 code,kbd,pre,samp{font-family:courier new,courier,monospace}
 small{font-size:12px}
@@ -12,34 +13,53 @@ legend{color:#000}
 fieldset,img{border:0}
 button,input,select,textarea{font-size:100%}
 table{border-collapse:collapse;border-spacing:0}
-article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{display:block;margin:0;padding:0}
+article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{
+	display:block;margin:0;padding:0}
 mark{background:#ff0}.clearfix:after{visibility:hidden;display:block;content:"";clear:both;font-size:0;height:0}
 .clearfix{zoom:1}
 html{overflow:hidden}
 body{background:#e9fafc;overflow:hidden}
-.full-ico,.messages-ico,.menu-hd i,.centre-ico,.project-ico,.portal-ico,.notice-ico,.nav-on-off i{background:url("../images/backend.png") no-repeat}
+.full-ico,.messages-ico,.menu-hd i,.centre-ico,.project-ico,.portal-ico,.notice-ico,.nav-on-off i{
+	background:url("../images/backend.png") no-repeat}
 .main{z-index:1;position:absolute;top:50px;right:0;bottom:0;left:0}
 .header{z-index:5;position:absolute;left:0;right:0;height:50px;background:#e9fafc;*zoom:1}
+<!--
+	 .header .logo{float:left;width:199px;height:35px;padding:15px 0 0;text-align:center}
+ -->
 .header .menu{position:relative;float:left;display:inline;margin:0 -2px 0 0;*zoom:1}
-.header .menu .menu-hd{position:relative;height:50px;line-height:50px;color:black}
-.header .menu .menu-hd span{display:block;max-width:275px;height:50px;padding:0 15px;font-size:24px;overflow:hidden;white-space:nowrap;text-overflow:ellipsis}
-.header .menu .menu-hd i{position:absolute;bottom:4px;right:6px;display:block;width:6px;height:6px;font-size:0;background-position:0 -45px}
+.header .menu .menu-hd{position:relative;height:50px;line-height:50px;color:black;cursor:pointer}
+.header .menu .menu-hd span{
+	font:14px/1.5 tahoma,arial,"microsoft yahei",simsun,sans-serif;display:block;max-width:275px;height:50px;
+	padding-top:5px;
+	padding-right:15px;
+	padding-bottom:5px;
+	padding-left:15px;
+	font-size:24px;overflow:hidden;white-space:nowrap;text-overflow:ellipsis}
+.header .menu .menu-hd i{position:absolute;bottom:4px;right:6px;display:block;
+	width:6px;height:6px;font-size:0;background-position:0 -45px}
 .header .menu .menu-hd-next i{width:4px;height:8px;background-position:0 -140px}
 .header .menu.menu-hover .menu-hd{background:#fff;color:#333}
 .header .menu.menu-hover i{width:6px;height:6px;background-position:0 -45px}
 .header .hd-l{position:absolute;top:0;left:0;width:900px}
 .header .hd-r{z-index:10;position:relative;float:right;display:inline}
-.header .hd-r-col{position:relative;float:left;display:inline;margin:0 0 0 -2px;height:50px;line-height:50px;color:black;font-size:14px;overflow:hidden}
+.header .hd-r-col{position:relative;float:left;display:inline;
+		height:50px;line-height:50px;color:black;font-size:14px;overflow:hidden}
 .header .hd-r-col a{color:#fff}
 .header .hd-r-col:hover{text-decoration:none}
-.header .hd-r-col span{display:block;height:50px;padding:0 20px;*zoom:1}
+.header .hd-r-col span{font:14px/1.5 tahoma,arial,"microsoft yahei",simsun,sans-serif;
+		display:block;height:50px;padding:0 100px;*zoom:1;
+		margin-top:15px;
+		}
 .header .hd-r-col .r{position:absolute;top:6px;right:10px}
 .header a.hd-r-col{cursor:pointer}
 .header .full-ico,.header .messages-ico{float:left;width:16px;height:14px;margin:18px 0 0}
 .header .messages-ico{background-position:0 -20px}
-.header .r{display:block;width:16px;height:16px;font:400 12px/16px simsun;text-align:center;background:#f60;color:#fff;-webkit-border-radius:50%;-moz-border-radius:50%;-o-border-radius:50%;border-radius:50%}
-
-.nav{z-index:101;position:absolute;top:0;bottom:50px;width:200px;min-height:300px;font-size:14px}
+.header .r{display:block;width:16px;height:16px;font:400 12px/16px simsun;
+	text-align:center;background:#f60;color:#fff;-webkit-border-radius:50%;-moz-border-radius:50%;
+	-o-border-radius:50%;border-radius:50%}
+.nav{background:#e9fafc;z-index:101;position:absolute;top:0;bottom:0px;width:200px;min-height:300px;
+	font:14px tahoma,arial,"microsoft yahei",simsun,sans-serif;
+	}
 .nav .item{cursor:pointer}
 .nav .item .item-hd{position:relative;display:block;height:50px;line-height:50px;color:#848d98}
 .nav .item .item-hd:hover{text-decoration:none}
@@ -62,14 +82,20 @@ body{background:#e9fafc;overflow:hidden}
 .nav .item-bd li.active a .item-not-child .arrow{display:none}
 .main-wrapper{position:absolute;top:0;left:200px;right:0;bottom:0;background:#fff;overflow:hidden;padding-bottom:0}
 .main-wrapper iframe{position:absolute;width:100%;height:100%}
-.arrow{display:block;width:0;height:0;line-height:0;border-width:6px 6px 0;border-style:solid dashed dashed;border-color:#10aeb8 transparent transparent}
+.arrow{display:block;width:0;height:0;line-height:0;border-width:6px 6px 0;border-style:solid dashed dashed;
+	border-color:#10aeb8 transparent transparent}
 .nav-on-off{position:absolute;bottom:0;left:150px;display:block;width:50px;height:50px}
 .nav-on-off i{float:left;width:12px;height:12px;margin:18px 0 0 18px;background-position:0 -80px}
 .nav-on-off:hover{text-decoration:none;background:#1a1c21}
-.nav-on-off:hover .on-off-tip{display:block;-webkit-animation:shake .6s ease-in-out .3s;-moz-animation:shake .6s ease-in-out .3s;-o-animation:shake .6s ease-in-out .3s;-ms-animation:shake .6s ease-in-out .3s;-animation:shake .6s ease-in-out .3s}
+.nav-on-off:hover .on-off-tip{display:block;-webkit-animation:shake .6s ease-in-out .3s;
+	-moz-animation:shake .6s ease-in-out .3s;-o-animation:shake .6s ease-in-out .3s;-ms-animation:shake .6s ease-in-out .3s;
+	-animation:shake .6s ease-in-out .3s}
 .nav-on-off:hover .on-off-ico{background-position:0 -120px}
-.on-off-tip{position:absolute;top:-45px;left:5px;display:none;width:40px;height:30px;line-height:30px;text-align:center;background:#0d0e10;color:#fff}
-.on-off-tip ins{position:absolute;bottom:-5px;left:50%;display:block;width:0;height:0;line-height:0;margin:0 0 0 -6px;border-width:6px 6px 0;border-style:solid dashed dashed;border-color:#0d0e10 transparent transparent;text-decoration:none}
+.on-off-tip{position:absolute;top:-45px;left:5px;display:none;width:40px;height:30px;line-height:30px;
+	text-align:center;background:#0d0e10;color:#fff}
+.on-off-tip ins{position:absolute;bottom:-5px;left:50%;display:block;width:0;height:0;line-height:0;
+	margin:0 0 0 -6px;border-width:6px 6px 0;border-style:solid dashed dashed;border-color:#0d0e10 transparent transparent;
+	text-decoration:none}
 @media screen and (max-height:700px),screen and (max-width:1009px){.nav{width:50px}.nav .item .item-hd span{display:none}
 .nav .item .item-hd i{margin:18px 0 0 18px}
 .nav .item .item-bd{position:relative;height:0}
